# humblBlogTutorials

./: .gitignore  DESCRIPTION  README.md  breakpoints.R
Py/: LRD.py  LSTM_prediction.ipynb  Stock_Sentiment_obb_V3.ipynb  breakpoints.py  decompose.py  liquidity.py  treynorRatio.py
R/: ATR.R  LRD.R  Stationary_Non-Stationary.R  bidAskSpread.R  breakpoints.R  decompose.R  finDashboard.R  logTransform.R  timeSeriesObject.R  treynorRatio.R  treynorRatio.py
py/: LSTM_prediction.ipynb
python/: decompose.py  liquidity.py  logTransform.py  pyproject.toml  stationary_nonstationary.py  z_scoreTutorial.ipynb
python/src/humblblog-tutorials/tutorial-notebooks/: ATR_python.py  z_scoreTutorial.ipynb
