[tool.poetry]
name = "humblblog-tutorials"
version = "0.0.1"
description = "A package to house all of the python tutorials for my blog"
authors = ["jjfantini <jjman2811@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
yfinance = "^0.2.33"
pandas = "^2.1.4"
ipykernel = "^6.27.1"
plotly = "^5.18.0"
scipy = "^1.11.4"
pandas-datareader = "^0.10.0"
nbformat = "^5.9.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
